    - zentrack_2/install/UPGRADE_mssqlserver.sql 1.25
    - zentrack_2/install/UPGRADE_mysql.sql 1.33
    - zentrack_2/install/UPGRADE_oracle.sql 1.32
    - zentrack_2/install/UPGRADE_postgres.sql 1.24
    - zentrack_2/install/seed_mssqlserver.sql 1.29
    - zentrack_2/install/seed_mysql.sql 1.40
    - zentrack_2/install/seed_oracle.sql 1.35
    - zentrack_2/install/seed_postgres.sql 1.31

2004-11-19, Kato
  Added missing varfield index for custom_menu1
    - zentrack_2/install/previous/2.5.0.1.UPGRADE_mysql.sql 1.2

2004-11-16, cfalonso
  Added ticket properties to custom screen (TK 150)
    - zentrack_2/includes/zenTrack.class,v  1.164
    - zentrack_2/includes/templates/ticket_customBox.php 1.7
  Don't show "click here to edit rules" after editing details of a Javascript or File data group (Bug #140)
    - zentrack_2/www/admin/addGroupSubmit.php 1.10
  Fix to log properly ticket edit's changes
    - zentrack_2/includes/zenTrack.class 1.163
  Fix to properly display ticket_titleBox information when adding new recipients to notify list (Bug #157).
    - zentrack_2/www/actions/addToNotify.php 1.8
  Replaced occurrences of $_ENV with $_SERVER (Bug #154)
    - zentrack_2/includes/zenTrack.class 1.162
    - zentrack_2/includes/templates/actions/contacts.php 1.5
    - zentrack_2/www/help/english/admin/admin_header.php 1.2
    - zentrack_2/www/help/english/users/user_header.php 1.4
    - zentrack_2/www/help/help_header.php 1.8

----- VERSION 2.5.0.2 (2004-11-10) -----

2004-11-07, Kato
  Added missing bugTo and bugFrom constants to configVars.php
    - zentrack_2/install/configVars.php.default 1.8  

2004-11-02, Kato
  Added ability to use label or id for standard fields in data group files
  Added validation for standard ticket fields to data group file entries
    - zentrack_2/includes/zenTrack.class 1.161
    - zentrack_2/includes/templates/behaviorDetailForm.php 1.8
    - zentrack_2/includes/templates/groupForm.php 1.13
    - zentrack_2/www/behavior_js.php 1.14